<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.sujay.play.mymusicapp.RandomActivity">

        <TextView
            style="@style/LabelStyle"
            android:labelFor="@id/random_text_view"
            android:text="@string/random_label" />

        <TextView
            android:id="@+id/random_text_view"
            style="@style/intentsStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/random_text" />

        <Button
            android:id="@+id/random_songs_to_home_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_activity_label" />

        <Button
            android:id="@+id/random_songs_to_artists_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/artists" />

        <Button
            android:id="@+id/random_songs_to_latest_songs_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/latest_songs" />

        <Button
            android:id="@+id/random_songs_to_latest_albums_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/latest_albums" />

        <Button
            android:id="@+id/random_songs_to_purchase_app_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/payment" />

        <Button
            android:id="@+id/random_songs_to_now_playing_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/now_playing" />
    </LinearLayout>
</ScrollView>